Fixed text on iPhone: test1

--- a/src/assets/styles/ProductCard.css
+++ b/src/assets/styles/ProductCard.css
@@ -58,36 +58,14 @@
 .tooltip.active {
   opacity: 1;
 }
-.oldPrice {
-  text-decoration: line-through;
-  color: red;
+.card-text.descr{
+  font-size: 0.8rem;
+  text-align: start;
+  text-wrap: wrap;
+  padding: 0 4px;
 }
-.salePrice {
-  color: green;
-}
-.saleProd {
-  height: 50px;
-}
-/* Creates a half border of red on the top left and bottom right */
-.saleProd::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: -11px;
-  border-left: 2px outset var(--sale);
-  width: 100%;
-  height: 50%;
-}
-/* Creates a half border of red on the top right and bottom left */
-.saleProd::after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  right: -10px;
-  border-right: 2px outset var(--sale);
-  width: 100%;
-  height: 50%;
-}
+
+
 
 /* makes the borders move along the side */
 @keyframes borderMoveLeft {
